tests/ui/unsafe_unpin/forget-unsafe-unpin-impl.stderr
error[E0277]: the trait bound `Foo<(), ()>: pin_project::UnsafeUnpin` is not satisfied
  --> $DIR/forget-unsafe-unpin-impl.rs:17:5
   |
14 | fn is_unpin<T: Unpin>() {}
   | ----------------------- required by `is_unpin`
...
17 |     is_unpin::<Foo<(), ()>>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^^^^^^^^^ the trait `pin_project::UnsafeUnpin` is not implemented for `Foo<(), ()>`
   |
   = note: required because of the requirements on the impl of `pin_project::UnsafeUnpin` for `pin_project::__private::Wrapper<Foo<(), ()>>`
   = note: required because of the requirements on the impl of `std::marker::Unpin` for `Foo<(), ()>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
